# graph_sweldeha

./: LICENSE  README.md  Read me.docx  graph.txt  pyproject.toml  test.py
data/: example1.txt  example3.txt
src/graphs_graph_sweldeha/: sp.py
