[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph_sweldeha"
version = "0.0.1"
authors = [
  { name="Samrawit Weldehawariyat", email="samrawitwolde8@gmail.com" },
]
description = "A Python package for Dijkstra's shortest path algorithm using a graph."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/samrawitw/graph_sweldeha"
"Bug Tracker" = "https://github.com/samrawitw/graph_sweldeha/issues"
